cambios en la estetica

--- a/src/components/text/text.module.css
+++ b/src/components/text/text.module.css
@@ -16,9 +16,8 @@
 .after{
     width: 90%;
     font-size: 1.4rem;
-    height: auto;
+    height: 20%;
     margin-top: 20px;
-    
     font-size: 18px;
     background-color: #ffffff;
     color: rgb(0, 0, 0);
